--- a/Styles/Pages-style/todo.css
+++ b/Styles/Pages-style/todo.css
@@ -139,3 +139,35 @@ select {
   background: white;
   color: rgb(255, 200, 0);
 }
+@media screen and (max-width: 570px) {
+  form {
+    flex-direction: column;
+    align-items: center;
+  }
+
+  form input,
+  form button {
+    font-size: 1.2rem;
+
+    margin: 0.5rem 0; 
+   
+  }
+
+  select {
+    width: 8rem;
+    height: 2.8rem;
+    padding: 0.8rem;
+  }
+  
+  .select::after {
+    top: auto; 
+    bottom: 0;
+    right: 50%; 
+    transform: translateX(50%);
+  }
+  header {
+    font-size: 1.2rem;
+  }
+
+  
+}
